fix wrapping hotel name

--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,6 @@ img {
 .card-accomodation-hotel {
   min-width: 200px;
   width: 29%;
-  height: 190px;
   background-color: var(--main-bg-light-color);
   border: 4px solid var(--main-bg-light-color);
   border-radius: 20px;
@@ -247,6 +246,11 @@ img {
 .card-accomodation-hotel img {
   width: 100%;
   height: 110px;
+  border-radius: 15px 15px 0 0;
+}
+
+.card-body-accomodation-hotel {
+  height: 70px;
   border-radius: 15px 15px 0 0;
 }
 
@@ -265,14 +269,21 @@ img {
   display: flex;
   width: 100%;
   flex-direction: column;
-  justify-content: baseline;
+  justify-content: flex-start;
   margin-left: 10px;
   line-height: 1.5;
+  align-items: flex-start;
 }
 
 h3 {
   font-size: 16px;
   font-weight: bold;
+}
+
+.card-body-accomodation-hotel h3 {
+  line-height: 18px;
+  height: 18px;
+  overflow: hidden;
 }
 
 .star-rating-hotel {
